--- a/website/static/sass/layout.scss
+++ b/website/static/sass/layout.scss
@@ -10,17 +10,16 @@ body {
 }
 
 .panel {
-  box-shadow: rgba(0, 0, 0, .2) 1px 1px 2px;
   border-radius: 2px;
   background: white;
   border: solid transparent;
-    cursor: pointer;
-box-shadow: 0px 2px 4px rgba(0,0,0,0.20);
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.20);
 }
 
 //makes the content fit the whole browser and makes the page scrollable
 .main-section{
-   height: 93vh;
+  height: 93vh;
   background-color: transparent;
   .main-content{
     overflow-y: scroll;
@@ -53,7 +52,7 @@ box-shadow: 0px 2px 4px rgba(0,0,0,0.20);
   background-color: #ffffff;
   .off-canvas-list {
     li {
-        text-decoration: underline;
+      text-decoration: none; //better than underline! :P
       label {
         border: none;
         background-color: #fb8521;
@@ -64,21 +63,21 @@ box-shadow: 0px 2px 4px rgba(0,0,0,0.20);
         color: #ff790a;
       }
     }
-    li:hover{
-      a{
+    li:hover {
+      a {
         background-color: #f0f0f0;
       }
     }
   }
 }
 
-.move-right, .move-left{
+.move-right, .move-left {
   .exit-off-canvas {
     box-shadow: #5a5a5a 0px 0px 7px;
   }
 }
 
-textarea{
+textarea {
   background-color: #fafafa;
   height: 100px;
 }
